--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body {
 
 .navbar-text {
   margin-right: 13px !important;
-  color: black !important;
+  color: dimgray !important;
   font-size: 26px !important;
   margin-top: 3px !important;
   margin-bottom: 10px !important;
